[package]
name = "wasm"
version = "4.5.1"
authors = ["Marvin A. Ruder <ratingtracker@mruder.dev>"]
description = "A collection of utilities written in Rust and compiled to WebAssembly"
license = "MIT"
repository = "https://github.com/marvinruder/rating-tracker"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "=0.1.7"
image = { version = "=0.25.1", default-features = false, features = [
  "jpeg",
  "png",
  "tiff",
  "avif",
] }
kamadak-exif = "=0.5.5"
wasm-bindgen = "=0.2.92"

[profile.release]
opt-level = 'z'
strip = 'symbols'
lto = true
panic = 'abort'
codegen-units = 1
