[package]
name = "wasm"
version = "6.1.0"
authors = ["Marvin A. Ruder <ratingtracker@mruder.dev>"]
description = "A collection of utilities written in Rust and compiled to WebAssembly"
license = "MIT"
repository = "https://github.com/marvinruder/rating-tracker"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
image = { version = "=0.25.4", default-features = false, features = [
  "jpeg",
  "png",
  "tiff",
  "avif",
] }
wasm-bindgen = "=0.2.95"

[profile.release]
opt-level = 'z'
strip = 'symbols'
lto = true
codegen-units = 1
