[package]
name = "wasm"
version = "7.0.0"
authors = ["Marvin A. Ruder <ratingtracker@mruder.dev>"]
description = "A collection of utilities written in Rust and compiled to WebAssembly"
license = "MIT"
repository = "https://github.com/marvinruder/rating-tracker"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
image = { version = "=0.25.5", default-features = false, features = [
  "jpeg",
  "png",
  "tiff",
  "avif",
] }
wasm-bindgen = "=0.2.100"

[profile.release]
opt-level = 'z'
strip = 'symbols'
lto = true
codegen-units = 1
